Refactor rpm package to amd64-only and include all dependencies

--- a/www.filebot.net/download.html
+++ b/www.filebot.net/download.html
@@ -64,9 +64,10 @@
 					<ul class="list">
 						<li>POSIX portable package: <a href="@{link.release.prefix}-portable.tar.xz">@{release}-portable.tar.xz</a> <small class="comment">for Linux, BSD and Solaris</small> <small class="comment">(requires OpenJDK 11)</small></li>
 						<li>POSIX legacy package: <a href="@{link.release.prefix}-portable-jdk8.tar.xz">@{release}-portable-jdk8.tar.xz</a> <small class="comment">for Linux, BSD and Solaris</small> <small class="comment">(requires OpenJDK 8)</small></li>
-						<li>Fedora / openSUSE / CentOS package: <a href="@{link.release.prefix}_universal-jdk8.rpm">@{release}_universal-jdk8.rpm</a> <small class="comment">(requires OpenJDK 8)</small></li>
+						<li>Fedora / openSUSE / CentOS package: <a href="@{link.release.prefix}_amd64.rpm">@{release}_amd64.rpm</a>
 						<li>Fedora / openSUSE / CentOS package is available <a href="linux/yum.html">via DNF and YUM</a></li>
 						<li>Arch Linux package is available <a href="linux/aur.html">via AUR</a></li>
+						<li>Universal Linux package is available <a href="linux/snap.html">via Snapcraft</a></li>
 						<li>Docker images are available <a href="linux/docker.html">on Docker Hub</a></li>
 					</ul>
 				</div>
