Added --q manual lookup docs

--- a/www.filebot.net/cli.html
+++ b/www.filebot.net/cli.html
@@ -187,11 +187,6 @@
 							<td>media folder or video file</td>
 						</tr>
 						<tr>
-							<td>--q</td>
-							<td>search query</td>
-							<td>force movie or series name</td>
-						</tr>
-						<tr>
 							<td>--lang</td>
 							<td>language code</td>
 							<td>English | French | German | Chinese | etc</td>
@@ -214,6 +209,11 @@
 							<td>-r</td>
 							<td>traverse folders recursively</td>
 							<td></td>
+						</tr>
+						<tr>
+							<td>--q</td>
+							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=12043">manual lookup</a></td>
+							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=12043">query expression</a></td>
 						</tr>
 						<tr>
 							<td>--file-filter</td>
