Fix missing links

--- a/www.filebot.net/purchase.html
+++ b/www.filebot.net/purchase.html
@@ -52,8 +52,8 @@
 					</a>
 
 					<ul class="list">
-						<li class="note">Please download and evaluate FileBot before purchasing a license.</li>
 						<li class="note">Please <a href="https://www.filebot.net/forums/viewtopic.php?t=11131" target="forum">type your email address correctly</a> when purchasing a license.</li>
+						<li class="note">Please download and <a href="https://www.filebot.net/forums/viewtopic.php?t=11790" target="forum">evaluate FileBot</a> before purchasing a license.</li>
 						<li class="note">A single per-user license is valid on all platforms and can be used on multiple machines.</li>
 						<li class="note"><a href="https://get.filebot.net/windows/" target="windows_store">Microsoft Store</a> and <a href="https://get.filebot.net/mac/" target="itunes_store">Mac App Store</a> purchases neither include nor require a <a href="https://www.filebot.net/forums/viewtopic.php?t=6265" target="forum">universal license</a>.</li>
 					</ul>
