Windows package is available via scoop

--- a/www.filebot.net/index.html
+++ b/www.filebot.net/index.html
@@ -189,7 +189,7 @@
 						<li>Fedora / openSUSE / CentOS package: <a href="@{link.release.prefix}_amd64.rpm">@{release}_amd64.rpm</a>
 						<li>Fedora / openSUSE / CentOS package is available <a href="linux/yum.html">via DNF and YUM</a></li>
 						<li>POSIX portable tarball: <a href="@{link.release.prefix}-portable.tar.xz">@{release}-portable.tar.xz</a> <small class="comment">for other Linux and FreeBSD devices</small></li>
-						<li>Windows package is available <a href="windows/chocolatey.html">via Chocolatey</a></li>
+						<li>Windows package is available <a href="windows/scoop.html">via scoop</a></li>
 						<li>macOS package is available <a href="mac/brew.html">via brew cask</a></li>
 						<li>Synology NAS package is available <a href="linux/syno.html">via Package Center</a></li>
 						<li>QNAP NAS package is available <a href="linux/qnap.html">via App Center</a></li>
