Add {files} binding for accessing child files (inside directory, inside archive, corresponding primary video file, etc)

--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -291,6 +291,12 @@
 							<td>File</td>
 						</tr>
 						<tr>
+							<td>emby</td>
+							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=4116">Emby Naming Standard</a></td>
+							<td>&lt;relative path&gt;</td>
+							<td>File</td>
+						</tr>
+						<tr>
 							<td>az</td>
 							<td>sort collection name initial</td>
 							<td>A</td>
@@ -619,6 +625,12 @@
 							<td>folder object</td>
 							<td>&lt;folder path&gt;</td>
 							<td>File</td>
+						</tr>
+						<tr>
+							<td>files</td>
+							<td>file group</td>
+							<td>&lt;file paths&gt;</td>
+							<td>File*</td>
 						</tr>
 						<tr>
 							<td>mediaPath</td>
