Add Plain File Mode link

--- a/www.filebot.net/cli.html
+++ b/www.filebot.net/cli.html
@@ -140,13 +140,16 @@
 							<td>
 							<table>
 								<tr>
-									<td>TheTVDB, AniDB <small class="comment">(Series Mode)</small></td>
+									<td>TheTVDB | AniDB | TheMovieDB::TV <small class="comment">(Series Mode)</small></td>
 								</tr>
 								<tr>
-									<td>TheMovieDB, OMDb <small class="comment">(Movie Mode)</small></td>
+									<td>TheMovieDB | OMDb <small class="comment">(Movie Mode)</small></td>
 								</tr>
 								<tr>
-									<td>AcoustID, ID3 <small class="comment">(Music Mode)</small></td>
+									<td>AcoustID | ID3 <small class="comment">(Music Mode)</small></td>
+								</tr>
+								<tr>
+									<td><a href="https://www.filebot.net/forums/viewtopic.php?t=2072">File | Exif | Xattr</a> <small class="comment">(Plain File Mode)</small></td>
 								</tr>
 							</table>
 							</td>
