Use channel link

--- a/www.filebot.net/index.html
+++ b/www.filebot.net/index.html
@@ -228,8 +228,8 @@
 					<h2>Contact</h2>
 					<p>
 						The project is continuously seeking for improvements, so any kind of <a target="_blank" href="forums/viewforum.php?f=8">feedback</a> is more than welcome 
-						and if there's any questions or problems just start posting in the <a target="_blank" href="forums/">forums</a> or check the <a target="_blank" href="manual.html"><acronym title="frequently asked questions">FAQ</acronym></a>.
-						We're social as well. Follow us on <a target="_blank" href="https://twitter.com/filebot_renamer">twitter</a>, become a fan on <a target="_blank" href="https://www.facebook.com/filebot">facebook</a> or join our <a target="_blank" href="https://discord.gg/skTt2em">Discord </a> channel.
+						and if there's any questions or problems just start posting in the <a target="_blank" href="forums/">forums</a> or check the <a target="_blank" href="https://www.filebot.net/manual.html"><acronym title="frequently asked questions">FAQ</acronym></a>.
+						We're social as well. Follow us on <a target="_blank" href="https://twitter.com/filebot_renamer">twitter</a>, become a fan on <a target="_blank" href="https://www.facebook.com/filebot">facebook</a> or join our <a target="_blank" href="https://www.filebot.net/channel.html">Discord </a> channel.
 					</p>
 				</div>
 			</div>
