Added {drive} binding for organizing files relatively to their drive or mount point (i.e. absolutely but within file system boundaries)

--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -627,6 +627,12 @@
 							<td>File</td>
 						</tr>
 						<tr>
+							<td>drive</td>
+							<td>file system root</td>
+							<td>&lt;folder path&gt;</td>
+							<td>File</td>
+						</tr>
+						<tr>
 							<td>files</td>
 							<td>file group</td>
 							<td>&lt;file paths&gt;</td>
