Add usage example links to CLI docs front page

--- a/www.filebot.net/cli.html
+++ b/www.filebot.net/cli.html
@@ -43,10 +43,13 @@
 					<h2>About</h2>
 					<p style="width: 420px">
 					FileBot can be called with a set of command-line arguments directly from the console 
-					or in scripts for automation running tasks like renaming TV shows and movies, fetching subtitles or checking SFV files.
+					or in scripts for automation, running tasks like renaming TV shows and movies, fetching subtitles or checking SFV files.
 					</p>
 					<p style="width: 420px">
-					The CLI is designed for simple tasks. Please have a look at <a href="script.html">Scripts and Automation</a> for something more powerful and find scripts for many common tasks <a href="https://www.filebot.net/forums/viewtopic.php?t=5">here</a>.
+					The CLI is designed for <a href="https://www.filebot.net/forums/viewtopic.php?t=4788">simple commands</a> that do one thing and do it well.
+					</p>
+					<p style="width: 420px">
+					Please have a look at <a href="script.html">Scripts and Automation</a> if you need more advanced behaviours and find scripts for many common tasks <a href="https://www.filebot.net/forums/viewtopic.php?t=5">here</a>.
 					</p>
 					<h2 id="examples">Examples</h2>
 					<h3 id="rename">Rename</h3>
@@ -114,8 +117,8 @@
 					</p>
 					<h3 id="advanced">Advanced Usage</h3>
 					<p>
-					Check out the <a href="https://www.filebot.net/forums/viewtopic.php?t=4788">FileBot Command-Line Examples</a>
-					on how to use <span class="cmd">find</span> and <span class="cmd">xargs</span> in combination with <span class="cmd">filebot</span> and advanced options such as <span class="option">--db xattr</span> and <span class="option">--filter</span> for querying and processing media files and photos.
+					Check out the <a href="https://www.filebot.net/forums/viewtopic.php?t=4788">FileBot Command-Line Usage Examples</a>
+					on how to use <span class="cmd">find</span> and <span class="cmd">xargs</span> in combination with <span class="cmd">filebot</span> and advanced options such as <span class="option">--db xattr</span> and <span class="option">--filter</span> for querying and offline processing of media files and photos.
 					</p>
 
 
