Add usage example links to CLI docs front page

--- a/www.filebot.net/cli.html
+++ b/www.filebot.net/cli.html
@@ -261,12 +261,12 @@
 						<tr>
 							<td>-list</td>
 							<td>print episode list</td>
-							<td></td>
+							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=12553">-rename</a> <small class="comment">(Linear Rename Mode)</small></td>
 						</tr>
 						<tr>
 							<td>-mediainfo</td>
 							<td>print media info</td>
-							<td></td>
+							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=11078">-exec</a> <small class="comment">(Find Execute Mode)</small></td>
 						</tr>
 						<tr>
 							<td>-script</td>
@@ -291,7 +291,7 @@
 						<tr>
 							<td>--apply</td>
 							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=11079">apply post-processing</a></td>
-							<td>artwork | nfo | date | import | prune</td>
+							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=11079">artwork | nfo | date | import | prune</a></td>
 						</tr>
 						<tr>
 							<td>-clear-cache</td>
@@ -310,12 +310,12 @@
 						</tr>
 						<tr>
 							<td>-no-xattr</td>
-							<td>disable <a href="https://www.filebot.net/forums/viewtopic.php?t=324">extended attributes</a></td>
+							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=324">disable extended attributes</a></td>
 							<td></td>
 						</tr>
 						<tr>
 							<td>-no-probe</td>
-							<td>disable media parser</td>
+							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=12022">disable media parser</a></td>
 							<td></td>
 						</tr>
 						<tr>
