--- a/www.filebot.net/cli.html
+++ b/www.filebot.net/cli.html
@@ -266,7 +266,7 @@
 						<tr>
 							<td>-mediainfo</td>
 							<td>print media info</td>
-							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=11078">-exec</a> <small class="comment">(Find Execute Mode)</small></td>
+							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=11078">-exec</a> <small class="comment">(Find Exec Mode)</small></td>
 						</tr>
 						<tr>
 							<td>-script</td>
