Added {vbr} and {abr} binding and support for automatic {bitrate} unit scaling

--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -490,26 +490,26 @@
 						</tr>
 						<tr>
 							<td>bitrate</td>
-							<td>bitrate in bit/s</td>
-							<td>128000</td>
+							<td>overall bitrate</td>
+							<td>2.0 Mbps</td>
 							<td>Integer</td>
 						</tr>
 						<tr>
-							<td>kbps</td>
-							<td>bitrate in kbit/s</td>
-							<td>320 kbps</td>
-							<td>String</td>
+							<td>vbr</td>
+							<td>video bitrate</td>
+							<td>1.6 Mbps</td>
+							<td>Integer</td>
 						</tr>
 						<tr>
-							<td>mbps</td>
-							<td>bitrate in mbit/s</td>
-							<td>2.0 Mbps</td>
-							<td>String</td>
+							<td>abr</td>
+							<td>audio bitrate</td>
+							<td>192 kbps</td>
+							<td>Integer</td>
 						</tr>
 						<tr>
 							<td>fps</td>
 							<td>frame rate</td>
-							<td>23.976</td>
+							<td>23.976 fps</td>
 							<td>Decimal</td>
 						</tr>
 						<tr>
