Added {vbr} and {abr} binding and support for automatic {bitrate} unit scaling

--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -492,25 +492,25 @@
 							<td>bitrate</td>
 							<td>overall bitrate</td>
 							<td>2.0 Mbps</td>
-							<td>Integer</td>
+							<td>BitRate</td>
 						</tr>
 						<tr>
 							<td>vbr</td>
 							<td>video bitrate</td>
 							<td>1.6 Mbps</td>
-							<td>Integer</td>
+							<td>BitRate</td>
 						</tr>
 						<tr>
 							<td>abr</td>
 							<td>audio bitrate</td>
 							<td>192 kbps</td>
-							<td>Integer</td>
+							<td>BitRate</td>
 						</tr>
 						<tr>
 							<td>fps</td>
 							<td>frame rate</td>
 							<td>23.976 fps</td>
-							<td>Decimal</td>
+							<td>FrameRate</td>
 						</tr>
 						<tr>
 							<td>khz</td>
@@ -694,21 +694,21 @@
 						</tr>
 						<tr>
 							<td>bytes</td>
-							<td>file size in bytes</td>
-							<td>355660657</td>
-							<td>Integer</td>
+							<td>file size</td>
+							<td>356 MB</td>
+							<td>FileSize</td>
 						</tr>
 						<tr>
 							<td>megabytes</td>
 							<td>file size in MB</td>
-							<td>356</td>
-							<td>String</td>
+							<td>356 MB</td>
+							<td>FileSize</td>
 						</tr>
 						<tr>
 							<td>gigabytes</td>
 							<td>file size in GB</td>
-							<td>0.4</td>
-							<td>String</td>
+							<td>0.4 GB</td>
+							<td>FileSize</td>
 						</tr>
 						<tr>
 							<td>crc32</td>
