Use dynamic unit type for {af} and {channels} bindings

--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -456,13 +456,13 @@
 							<td>af</td>
 							<td>audio channel count</td>
 							<td>6ch</td>
-							<td>ChannelNumber</td>
+							<td>ChannelCount</td>
 						</tr>
 						<tr>
 							<td>channels</td>
 							<td>audio channel layout</td>
 							<td>5.1</td>
-							<td>ChannelNumber</td>
+							<td>ChannelCount</td>
 						</tr>
 						<tr>
 							<td>resolution</td>
