--- a/www.filebot.net/cli.html
+++ b/www.filebot.net/cli.html
@@ -238,7 +238,7 @@
 						</tr>
 						<tr>
 							<td>--output</td>
-							<td>output format or path</td>
+							<td>output path</td>
 							<td>
 							<table>
 								<tr>
