--- a/www.filebot.net/cli.html
+++ b/www.filebot.net/cli.html
@@ -305,7 +305,7 @@
 						</tr>
 						<tr>
 							<td>-clear-history</td>
-							<td>reset rename history</td>
+							<td>reset history</td>
 							<td></td>
 						</tr>
 						<tr>
