Add -revert to man page

--- a/www.filebot.net/cli.html
+++ b/www.filebot.net/cli.html
@@ -294,6 +294,11 @@
 							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=11079">artwork | nfo | date | import | prune</a></td>
 						</tr>
 						<tr>
+							<td>-revert</td>
+							<td>undo <a href="#arguments">-rename</a> operations</td>
+							<td></td>
+						</tr>
+						<tr>
 							<td>-clear-cache</td>
 							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=1996">clear cache</a></td>
 							<td></td>
