compute or verify hashes

--- a/www.filebot.net/cli.html
+++ b/www.filebot.net/cli.html
@@ -228,8 +228,8 @@
 						</tr>
 						<tr>
 							<td>-check</td>
-							<td>create or check sfv file</td>
-							<td>folder or sfv file</td>
+							<td>compute or verify hashes</td>
+							<td>folder or verification file</td>
 						</tr>
 						<tr>
 							<td>-extract</td>
@@ -248,7 +248,7 @@
 									<td>srt <small class="comment">(Subtitle Mode)</small></td>
 								</tr>
 								<tr>
-									<td>sfv | md5 | sha256 <small class="comment">(Checksum Mode)</small></td>
+									<td>verification file <small class="comment">(Checksum Mode)</small></td>
 								</tr>
 							</table>
 							</td>
