Fix author variable

--- a/www.filebot.net/index.html
+++ b/www.filebot.net/index.html
@@ -6,7 +6,7 @@
 
 		<title>@{application.name} - @{package.synopsis}</title>
 		<meta name="description" content="@{package.description}" />
-		<meta name="author" content="@{package.developer}" />
+		<meta name="author" content="@{package.company}" />
 
 		<meta itemprop="name" content="@{application.name} - @{package.synopsis}" />
 		<meta itemprop="description" content="@{package.description}" />
