Added -find command as shorthand for -mediainfo . --format {f} calls to mimic Unix find -exec

--- a/www.filebot.net/cli.html
+++ b/www.filebot.net/cli.html
@@ -284,6 +284,11 @@
 							<td>all | fine | info | warning</td>
 						</tr>
 						<tr>
+							<td>-find</td>
+							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=12622">find files</a></td>
+							<td></td>
+						</tr>
+						<tr>
 							<td>-exec</td>
 							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=11078">execute command</a></td>
 							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=11078">exec expression</a></td>
