Windows packages are available via winget and via scoop

--- a/www.filebot.net/download.html
+++ b/www.filebot.net/download.html
@@ -33,7 +33,7 @@
 						<li>64-bit Windows Installer: <a href="@{link.release.prefix}_x64.msi">@{release}_x64.msi</a></li>
 						<li>32-bit Windows Installer: <a href="@{link.release.prefix}_x86.msi">@{release}_x86.msi</a></li>
 						<li>Windows Portable ZIP: <a href="@{link.release.prefix}-portable.zip">@{release}-portable.zip</a></li>
-						<li>Windows package is available <a href="windows/scoop.html">via scoop</a></li>
+						<li>Windows packages are available <a href="windows/winget.html">via winget</a> and <a href="windows/scoop.html">via scoop</a></li>
 					</ul>
 				</div>
 
