[DOCS] Revert files via the internal History

--- a/www.filebot.net/cli.html
+++ b/www.filebot.net/cli.html
@@ -300,7 +300,7 @@
 						</tr>
 						<tr>
 							<td>-revert</td>
-							<td>undo <a href="#arguments">-rename</a> operations</td>
+							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=12133">undo rename operations</a></td>
 							<td></td>
 						</tr>
 						<tr>
