[DOCS] Target Unix Filesystem

--- a/www.filebot.net/cli.html
+++ b/www.filebot.net/cli.html
@@ -319,6 +319,11 @@
 							<td></td>
 						</tr>
 						<tr>
+							<td>-unixfs</td>
+							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=12627">disable file path validation</a></td>
+							<td></td>
+						</tr>
+						<tr>
 							<td>-no-xattr</td>
 							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=324">disable extended attributes</a></td>
 							<td></td>
