[DOCS] Revert files via the internal History

--- a/www.filebot.net/cli.html
+++ b/www.filebot.net/cli.html
@@ -315,7 +315,7 @@
 						</tr>
 						<tr>
 							<td>-clear-history</td>
-							<td>reset history</td>
+							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=12133">reset history</a></td>
 							<td></td>
 						</tr>
 						<tr>
