Reorganize argument order for manpage

--- a/www.filebot.net/cli.html
+++ b/www.filebot.net/cli.html
@@ -188,9 +188,9 @@
 							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=3244">mapper expression</a></td>
 						</tr>
 						<tr>
-							<td>-get-subtitles</td>
-							<td>fetch missing subtitles</td>
-							<td>media folder or video file</td>
+							<td>--q</td>
+							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=12043">manual lookup</a></td>
+							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=12043">query expression</a></td>
 						</tr>
 						<tr>
 							<td>--lang</td>
@@ -217,24 +217,14 @@
 							<td></td>
 						</tr>
 						<tr>
-							<td>--q</td>
-							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=12043">manual lookup</a></td>
-							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=12043">query expression</a></td>
+							<td>-d</td>
+							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=12263">rename folders</a></td>
+							<td></td>
 						</tr>
 						<tr>
 							<td>--file-filter</td>
 							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=4222">input file filter</a></td>
 							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=3244">file filter expression</a></td>
-						</tr>
-						<tr>
-							<td>-check</td>
-							<td>compute or verify hashes</td>
-							<td>folder or verification file</td>
-						</tr>
-						<tr>
-							<td>-extract</td>
-							<td>extract archives</td>
-							<td>folder or archive file</td>
 						</tr>
 						<tr>
 							<td>--output</td>
@@ -254,6 +244,31 @@
 							</td>
 						</tr>
 						<tr>
+							<td>--apply</td>
+							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=11079">apply post-processing</a></td>
+							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=11079">artwork | nfo | date | import | prune</a></td>
+						</tr>
+						<tr>
+							<td>-exec</td>
+							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=11078">execute command</a></td>
+							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=11078">exec expression</a></td>
+						</tr>
+						<tr>
+							<td>-extract</td>
+							<td>extract archives</td>
+							<td>folder or archive file</td>
+						</tr>
+						<tr>
+							<td>-check</td>
+							<td>compute or verify hashes</td>
+							<td>folder or verification file</td>
+						</tr>
+						<tr>
+							<td>-get-subtitles</td>
+							<td>fetch missing subtitles</td>
+							<td>media folder or video file</td>
+						</tr>
+						<tr>
 							<td>--encoding</td>
 							<td>output charset</td>
 							<td>UTF-8 | Windows-1252 | GB18030 | etc</td>
@@ -264,13 +279,24 @@
 							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=12553">-rename</a> <small class="comment">(Linear Rename Mode)</small></td>
 						</tr>
 						<tr>
+							<td>-find</td>
+							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=12622">print file paths</a></td>
+							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=12622">-exec</a> <small class="comment">(Find Exec Mode)</small></td>
+						</tr>
+						<tr>
 							<td>-mediainfo</td>
 							<td>print media info</td>
-							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=11078">-exec</a> <small class="comment">(Find Exec Mode)</small></td>
+							<td></td>
 						</tr>
 						<tr>
 							<td>-script</td>
 							<td><a href="script.html">run script</a></td>
+							<td></td>
+						</tr>
+
+						<tr>
+							<td>-revert</td>
+							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=12133">undo rename operations</a></td>
 							<td></td>
 						</tr>
 						<tr>
@@ -282,26 +308,6 @@
 							<td>--log</td>
 							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=3913">log level</a></td>
 							<td>all | fine | info | warning</td>
-						</tr>
-						<tr>
-							<td>-find</td>
-							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=12622">find files</a></td>
-							<td></td>
-						</tr>
-						<tr>
-							<td>-exec</td>
-							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=11078">execute command</a></td>
-							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=11078">exec expression</a></td>
-						</tr>
-						<tr>
-							<td>--apply</td>
-							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=11079">apply post-processing</a></td>
-							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=11079">artwork | nfo | date | import | prune</a></td>
-						</tr>
-						<tr>
-							<td>-revert</td>
-							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=12133">undo rename operations</a></td>
-							<td></td>
 						</tr>
 						<tr>
 							<td>-clear-cache</td>
