Support for media query (prefers-color-scheme: dark)

--- a/www.filebot.net/index.html
+++ b/www.filebot.net/index.html
@@ -20,8 +20,10 @@
 		<meta property="fb:admins" content="1320039434" />
 		<meta property="fb:page_id" content="102742293101063" />
 
-		<link rel="stylesheet" href="base.css" type="text/css" />
 		<link rel="icon" href="favicon.png" sizes="16x16 32x32" type="image/png">
+
+		<link rel="stylesheet" href="base.css" type="text/css" />
+		<link rel="stylesheet" href="base.dark.css" type="text/css" media="(prefers-color-scheme: dark)" />
 
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Dawning+of+a+New+Day">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
@@ -86,7 +88,7 @@
 						<li>Hit &quot;Rename&quot;!</li>
 					</ol>
 					<p><strong>Fetching subtitles is just as easy, just drop it in!</strong> Besides automatic lookup you'll also be able to 
-					manually search and download subtitles, preview subtitles and fix encoding problems (e.g. force UTF-8).</p>
+					manually search and download subtitles, preview subtitles and fix encoding problems.</p>
 					<ol>
 						<li>Drag your movie or episode files onto the top-right <img alt="===" src="images/droparea.png" /> drop area</li>
 						<li>Hit &quot;Download&quot;!</li>
